--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
 
-  <!-- <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.min.css"> -->
+  <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
 </head>
